[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[[example]]
name = "encoding"

[[example]]
name = "encryption"

[[example]]
name = "hashing"

[[example]]
name = "padding"

[[example]]
name = "register"

[[example]]
name = "crackme001"
path = "examples/crackmes/crackme001.rs"

[[example]]
name = "crackme005"
path = "examples/crackmes/crackme005.rs"

[[example]]
name = "crackme006"
path = "examples/crackmes/crackme006.rs"

[[example]]
name = "crackme009"
path = "examples/crackmes/crackme009.rs"

[dependencies]
